MDEV-21842 auto_increment does not increment with compound primary key on partitioned table

When a partitioned table has an auto-increment column and the column is
placed at the first column of a key, the auto-increment gives out
duplicate numbers under concurrent inserts on the table.

The bug's root cause is that when there are concurrent inserts and some
of them cause duplicate key errors,
ha_partition::restore_auto_increment() unproperly decrements
part_share->next_auto_inc_val by blind write.

This bug is introduced by c9cba59749e1b5a39a9e3a0a5b8bd762507245f9,
which fixed MDEV-17333. We almost revert the commit but we can prevent
recurrence of MDEV-17333 by updating next_auto_inc_val in
ha_partition::write_row() only when handler::ha_write_row() returns no
error. The point is to prevent next_auto_inc_val from being incremented
rather than to restore it after increment.